<resources>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_next">Next question</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <string name="com_mixpanel_android_previous">Previous question</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com.crashlytics.android.build_id">62a73133-979a-440c-aae1-7e62c3db3514</string>
    <string name="login">LOG IN</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="repost_label">REPOSTS</string>
    <string name="favorites_label">FAVORITES</string>
    <string name="replay_button_text">REPLAY</string>
    <string name="repost_button_text">REPOST</string>
    <string name="favorite_button_text">FAVORITE</string>
    <string name="share_button_text">SHARE</string>
    <string name="repost_toast_text">You reposted this video</string>
    <string name="favorite_toast_text">You favorited this video</string>
    <string name="signup_signup_description">"Log in below to follow channels and
repost, favorite, and share videos"</string>
    <string name="signup_two_way_description">"Log in below to follow channels and
repost, favorite, and share videos"</string>
    <string name="signup_permission">"Milk Video will never post to Facebook
or Google without your permission"</string>
    <string name="signup_google_button_text">Google</string>
    <string name="signup_samsung_button_text">Samsung</string>
    <string name="signup_facebook_button_text">Facebook</string>
    <string name="signup_login">LOG IN</string>
    <string name="legal_text_header">"By continuing, you agree to Milk Video's"</string>
    <string name="legal_links">%1$s • %2$s • %3$s</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="create_email_hint">EMAIL</string>
    <string name="firstname_hint">First Name\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009</string>
    <string name="lastname_hint">Last Name\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009</string>
    <string name="sign_up_button_label">REGISTER</string>
    <string name="find_you">Make it easy for your friends to find you</string>
    <string name="get_to_know_you">"WE'D LOVE TO GET TO KNOW YOU!"</string>
    <string name="missing_required_error">Please complete all required fields</string>
    <string name="password_length_error">Password must be at least six characters</string>
    <string name="your_info">YOUR INFO</string>
    <string name="profile_add_photo">ADD PHOTO</string>
    <string name="profile_add_from_gallery">Add From Gallery</string>
    <string name="profile_add_from_camera">Add From Camera</string>
    <string name="profile_remove">Remove</string>
    <string name="profile_photo_dialog_title">Photo</string>
    <string name="save">SAVE</string>
    <string name="username_taken_error">Username is already taken. Please choose another username.</string>
    <string name="settings">SETTINGS</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="follow_friends">Follow Friends</string>
    <string name="settings_general_title">GENERAL</string>
    <string name="notifications">Notifications</string>
    <string name="autoplay">Autoplay (Landscape)</string>
    <string name="settings_about_title">ABOUT</string>
    <string name="version_label">Version</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyright_and_licenses">Copyright &amp; Licenses</string>
    <string name="help">Help</string>
    <string name="settings_sign_out_text">LOG OUT</string>
    <string name="login_forgot_your_password">Forgot your password?</string>
    <string name="login_username_hint">USERNAME</string>
    <string name="login_password_hint">PASSWORD</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_password_description">Enter your email to receive a link to create a new password</string>
    <string name="reset_password_email_hint">Email</string>
    <string name="reset_password_confirmation">"We've emailed you a link to
reset your password"</string>
    <string name="reset_confirmation_title">Emailed</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="search_see_all_users">See All Users</string>
    <string name="no_results">No results</string>
    <string name="search_users">USERS</string>
    <string name="search_videos">VIDEOS</string>
    <string name="signout_confirmation_title">Log out</string>
    <string name="signout_confirmation_body">You will no longer be able to repost, favorite, share videos or follow users.</string>
    <string name="signout_cancel_text">CANCEL</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_blurb">"Tap to follow channels and
see their posts in your feed"</string>
    <string name="welcome_fb_blurb">"Tap to follow friends using Milk Video
and see their reposts in your feed"</string>
    <string name="welcome_done">DONE</string>
</resources>