<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings" style="@style/Titlebar.Subtitle" />
    <Button android:id="@id/settings_sign_out_button" android:layout_width="fill_parent" android:text="@string/settings_sign_out_text" android:layout_alignParentBottom="true" style="@style/ButtonBar.Button.Positive" />
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/settings_sign_out_button" android:layout_below="@id/title" android:overScrollMode="never">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="49.0dip" android:divider="@drawable/linear_layout_divider" android:showDividers="middle" android:dividerPadding="16.0dip">
                <TextView android:id="@id/edit_profile_view" android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height" android:text="@string/edit_profile_text" style="@style/MenuItem" />
                <TextView android:id="@id/follow_friends_view" android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height" android:text="@string/follow_friends" style="@style/MenuItem" />
                <TextView android:textAppearance="@style/TextStyle.SectionHeader" android:id="@id/general_view" android:paddingLeft="29.0dip" android:paddingTop="50.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_general_title" />
                <TextView android:id="@id/notifications_view" android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height" android:text="@string/notifications" android:drawableRight="@drawable/checked_box" style="@style/MenuItemWithoutArrow" />
                <TextView android:id="@id/autoplay_view" android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height" android:text="@string/autoplay" android:drawableRight="@drawable/checked_box" style="@style/MenuItemWithoutArrow" />
                <TextView android:textAppearance="@style/TextStyle.SectionHeader" android:id="@id/about_view" android:paddingLeft="29.0dip" android:paddingTop="50.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_about_title" />
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height">
                    <TextView android:id="@id/version_label" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/version_label" android:drawableRight="@null" style="@style/MenuItem" />
                    <TextView android:id="@id/version_value" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" style="@style/MenuItemWithoutArrow" />
                </RelativeLayout>
                <TextView android:id="@id/privacy_policy_view" android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height" android:text="@string/privacy_policy" style="@style/MenuItem" />
                <TextView android:id="@id/terms_of_service_view" android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height" android:text="@string/terms_of_service" style="@style/MenuItem" />
                <TextView android:id="@id/copyright_and_licenses_view" android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height" android:text="@string/copyright_and_licenses" style="@style/MenuItem" />
                <TextView android:id="@id/help_view" android:layout_width="fill_parent" android:layout_height="@dimen/menu_item_height" android:text="@string/help" style="@style/MenuItem" />
                <View android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/linear_layout_divider" />
                <ImageView android:id="@id/signup_facebook_button" android:background="@drawable/login_button_facebook" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</RelativeLayout>