<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="100.0dip">
        <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="45.0dip" android:text="@string/reset_password" style="@style/DialogPanelTitle" />
        <TextView android:gravity="center_horizontal" android:layout_width="243.0dip" android:layout_height="wrap_content" android:layout_marginBottom="45.0dip" android:text="@string/reset_password_description" android:lineSpacingMultiplier="1.25" style="@style/DialogPanelText" />
        <com.samsung.milk.milkvideo.views.ValidationEditText android:textSize="14.0dip" android:textColor="@color/nearly_white" android:id="@id/forgot_password_email_entry" android:background="@drawable/validation_edit_text_background" android:paddingLeft="9.0dip" android:paddingRight="40.0dip" android:paddingBottom="7.0dip" android:layout_width="243.0dip" android:layout_height="wrap_content" android:hint="@string/reset_password_email_hint" android:singleLine="true" android:drawableLeft="@drawable/validation_email_icon" android:drawablePadding="17.0dip" android:inputType="textEmailAddress" android:imeOptions="actionDone" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/cancel_submit_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/forgot_password_cancel_button" android:text="@string/cancel" style="@style/ButtonBar.Button.Negative" />
        <Button android:id="@id/forgot_password_send_email_button" android:text="@string/send_email" style="@style/ButtonBar.Button.Positive" />
    </LinearLayout>
</FrameLayout>