<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="bottom" android:id="@id/fragment_signout" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:volt="http://schemas.android.com/apk/res/com.samsung.milk.milkvideo">
    <LinearLayout android:id="@id/button_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@id/settings_cancel_button" android:text="@string/signout_cancel_text" style="@style/ButtonBar.Button.Negative" />
        <Button android:id="@id/settings_sign_out_button" android:text="@string/settings_sign_out_text" style="@style/ButtonBar.Button.Positive" />
    </LinearLayout>
    <TextView android:textSize="16.0dip" android:textColor="@android:color/black" android:id="@id/body_text" android:background="@color/signout_panel_background" android:paddingLeft="35.0dip" android:paddingRight="35.0dip" android:layout_width="fill_parent" android:layout_height="62.0dip" android:text="@string/signout_confirmation_body" android:layout_above="@id/button_layout" volt:fontPath="fonts/helv-lt.otf" />
    <TextView android:textSize="26.0dip" android:textColor="@android:color/black" android:background="@color/signout_panel_background" android:paddingLeft="35.0dip" android:paddingTop="29.0dip" android:paddingRight="35.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:text="@string/signout_confirmation_title" android:layout_above="@id/body_text" volt:fontPath="fonts/helv-lt.otf" />
</RelativeLayout>