<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/password_confirmation_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset_confirmation_title" style="@style/DialogPanelTitle" />
    <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="43.0dip" android:layout_marginBottom="43.0dip" android:text="@string/reset_password_confirmation" style="@style/DialogPanelText" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/ok" android:layout_width="250.0dip" android:layout_height="43.0dip" android:text="@string/ok" style="@style/LargeOutlinedButton" />
</LinearLayout>