<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/signup_user_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/signup_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="76.0dip" android:src="@drawable/milk_video_logo" android:layout_centerHorizontal="true" />
    <TextView android:gravity="center" android:id="@id/signup_signup_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/signup_signup_description" android:singleLine="false" android:layout_below="@id/signup_logo" android:layout_centerHorizontal="true" android:lineSpacingMultiplier="1.25" style="@style/DialogPanelText" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="71.0dip" android:layout_below="@id/signup_signup_description"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:id="@id/signup_samsung_account_button" android:visibility="gone" android:layout_marginRight="43.0dip" android:text="@string/signup_samsung_button_text" android:drawableTop="@drawable/login_button_circle_samsung" style="@style/LoginButton" />
        <TextView android:id="@id/signup_google_button" android:layout_marginRight="43.0dip" android:text="@string/signup_google_button_text" android:drawableTop="@drawable/login_button_circle_google" style="@style/LoginButton" />
        <TextView android:id="@id/signup_facebook_button" android:text="@string/signup_facebook_button_text" android:drawableTop="@drawable/login_button_circle_facebook" style="@style/LoginButton" />
    </LinearLayout>
    <TextView android:gravity="center" android:id="@id/signup_permission" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="17.0dip" android:text="@string/signup_permission" android:singleLine="false" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:lineSpacingMultiplier="1.25" style="@style/DialogPanelBottom" />
    <FrameLayout android:id="@id/spinner" android:background="@color/translucent_black_80_percent" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
</RelativeLayout>