<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="80.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:volt="http://schemas.android.com/apk/res/com.samsung.milk.milkvideo">
    <LinearLayout android:orientation="vertical" android:id="@id/search_users_headers" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="37.0dip">
        <TextView android:textAppearance="@style/TextStyle.SectionHeader" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/search_users" />
        <com.samsung.milk.milkvideo.views.UserSearchResultView android:id="@id/search_user_header_result" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textAppearance="@style/TextStyle.ListItem" android:gravity="center_vertical" android:id="@id/search_see_all_users" android:background="@drawable/search_see_all_users_background" android:paddingLeft="9.0dip" android:paddingRight="9.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/search_see_all_users" android:drawableRight="@drawable/button_forward" />
    </LinearLayout>
    <TextView android:textAppearance="@style/TextStyle.SectionHeader" android:id="@id/search_videos_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginBottom="13.0dip" android:text="@string/search_videos" />
    <TextView android:textSize="16.0dip" android:textColor="@color/nearly_white" android:id="@id/search_no_results" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="29.0dip" android:layout_marginTop="9.0dip" android:text="@string/no_results" volt:fontPath="fonts/helv-lt.otf" />
</LinearLayout>