<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:volt="http://schemas.android.com/apk/res/com.samsung.milk.milkvideo">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/login_form_linearlayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_gravity="center_horizontal" android:id="@id/login_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="25.0dip" android:text="@string/login" style="@style/DialogPanelTitle" />
        <EditText android:textSize="14.0dip" android:textColor="@color/nearly_white" android:id="@id/login_username" android:background="@drawable/edit_text_background" android:paddingLeft="9.0dip" android:paddingBottom="7.0dip" android:layout_width="243.0dip" android:layout_height="wrap_content" android:layout_margin="25.0dip" android:hint="@string/login_username_hint" android:singleLine="true" android:drawableLeft="@drawable/validation_username_icon" android:drawablePadding="17.0dip" volt:fontPath="fonts/helv-lt.otf" />
        <EditText android:textSize="14.0dip" android:textColor="@color/nearly_white" android:id="@id/login_password" android:background="@drawable/edit_text_background" android:paddingLeft="9.0dip" android:paddingBottom="7.0dip" android:layout_width="243.0dip" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:hint="@string/login_password_hint" android:singleLine="true" android:drawableLeft="@drawable/validation_password_icon" android:drawablePadding="17.0dip" android:inputType="textPassword" android:imeOptions="actionDone" volt:fontPath="fonts/helv-lt.otf" />
        <TextView android:textSize="14.0dip" android:textColor="@color/turquoise_text" android:id="@id/login_forgot_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/login_forgot_your_password" volt:fontPath="fonts/helv-lt.otf" />
        <TextView android:textSize="14.0dip" android:textColor="@color/turquoise_text" android:id="@id/login_login_as_fake_user" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="Login As Fake User" volt:fontPath="fonts/helv-lt.otf" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/cancel_submit_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/login_cancel_button" android:text="@string/cancel" style="@style/ButtonBar.Button.Negative" />
        <Button android:id="@id/login_login_button" android:text="@string/login" style="@style/ButtonBar.Button.Positive" />
    </LinearLayout>
</FrameLayout>