<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:volt="http://schemas.android.com/apk/res/com.samsung.milk.milkvideo">
    <LinearLayout android:orientation="vertical" android:id="@id/header_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginBottom="40.0dip" android:layout_centerHorizontal="true">
        <TextView android:textSize="26.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="34.0dip" android:text="@string/welcome_title" volt:fontPath="fonts/helv-lt.otf" style="@style/Title" />
        <TextView android:textSize="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_blurb" android:lineSpacingMultiplier="1.3" volt:fontPath="fonts/helv-lt.otf" style="@style/Subtitle" />
    </LinearLayout>
    <GridView android:id="@id/brands" android:paddingBottom="52.0dip" android:scrollbars="none" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:horizontalSpacing="-43.0dip" android:verticalSpacing="15.0dip" android:numColumns="3" android:layout_below="@id/header_container" android:layout_centerHorizontal="true" android:overScrollMode="never" />
    <FrameLayout android:id="@id/welcome_bottom_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageView android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/gradient_bottom" android:scaleType="fitXY" />
        <Button android:layout_gravity="bottom" android:id="@id/next_button" android:visibility="gone" android:text="@string/next" style="@style/ButtonBar.Button.Positive" />
        <Button android:layout_gravity="bottom" android:id="@id/im_done_button" android:visibility="gone" android:text="@string/welcome_done" style="@style/ButtonBar.Button.Positive" />
    </FrameLayout>
    <ProgressBar android:id="@id/spinner" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
</RelativeLayout>